# svg-converter-wasm

./: .gitignore  .npmignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
scripts/: build.js  build.mjs
src/: index.ts  lib.rs
