[package]
name = "svg_converter_wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
usvg = "=0.18.0"
resvg = { version = "=0.18.0", features = ["default"] }
tiny-skia = "=0.6.6"
image = { version = "0.23.14", features = ["png", "jpeg"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
